Header, Branding MV Mettlach

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -2,7 +2,7 @@ de:
 
   layouts:
     application:
-      title: "Notenarchiv"
+      title: "Notenarchiv der Musikvereinigung 1851 Mettlach e.V."
 
   pieces:
     index: 
