Styling der Buttons etc.

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -45,7 +45,7 @@ de:
         number: "Nr."
 
     submit:
-      create: "Anlegen"
+      create: "Speichern"
       update: "Änderungen speichern"
 
   activerecord:
