Schublade auf String geändert, alte Daten eingespielt, kleinere Anpassungen

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -4,7 +4,7 @@ de:
 
   layouts:
     application:
-      title: "Notenarchiv der Musikvereinigung 1851 Mettlach e.V."
+      title: "Notenarchiv"
 
   pieces:
     index: 
